# api/controllers/person.go
@@ -4,7 +4,6 @@ import (
 	"api/httputil"
 	"api/models"
 	"net/http"
-	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
@@ -14,23 +13,17 @@ type PersonController struct{}
 var personModel = new(models.Person)
 
 // Get godoc
-// @Summary Webserver status
-// @Description Returns 200 OK with "Working" when the server is running
+// @Summary Get Person
+// @Description Gets Person by ID
 // @Tags person
 // @Accept  json
 // @Produce  json
-// @Param id path int true "Person ID"
+// @Param id path string true "Person ID"
 // @Success 200 {object} string
-// @Router /api/person/{id} [get]
+// @Router /person/{id} [get]
 func (p PersonController) Get(c *gin.Context) {
 	if c.Param("id") != "" {
-		id, err := strconv.ParseUint(c.Param("id"), 10, 64)
-		if err != nil {
-			httputil.NewError(c, http.StatusInternalServerError, err, "Invalid ID")
-			c.Abort()
-			return
-		}
-		user, err := personModel.GetByID(id)
+		user, err := personModel.GetByID(c.Param("id"))
 		if err != nil {
 			httputil.NewError(c, http.StatusInternalServerError, err, "Error while getting person")
 			c.Abort()
@@ -44,24 +37,26 @@ func (p PersonController) Get(c *gin.Context) {
 	return
 }
 
+// Create godoc
+// @Summary Create Person
+// @Description Creates a Person
+// @Tags person
+// @Accept  json
+// @Produce  json
+// @Param person body models.Person true "Person"
+// @Success 200 {object} string
+// @Router /person/ [post]
 func (p PersonController) Create(c *gin.Context) {
-	if c.Param("id") != "" {
-		id, err := strconv.ParseUint(c.Param("id"), 10, 64)
-		if err != nil {
-			httputil.NewError(c, http.StatusInternalServerError, err, "Invalid ID")
-			c.Abort()
-			return
-		}
-		user, err := personModel.GetByID(id)
-		if err != nil {
-			httputil.NewError(c, http.StatusInternalServerError, err, "Error while getting person")
-			c.Abort()
-			return
-		}
-		c.JSON(http.StatusOK, gin.H{"message": "Person found!", "person": user})
-		return
+	var newPerson models.Person
+	err := c.ShouldBindJSON(&newPerson)
+	if err != nil {
+		httputil.NewError(c, http.StatusInternalServerError, err, "Invalid body")
 	}
-	c.JSON(http.StatusBadRequest, gin.H{"message": "bad request"})
+	gg, err := newPerson.Create()
+	if err != nil {
+		httputil.NewError(c, http.StatusInternalServerError, err, "Shit.")
+	}
+	c.JSON(http.StatusBadRequest, gin.H{"message": "bad request", "body": gg})
 	c.Abort()
 	return
 }
